--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,124 @@
-.App {
-  text-align: center;
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+*{
+    box-sizing:border-box;
+    max-width:100%; /*you can never be bigger than your parent - this is going to stop that dreaded horizontal scroll bar*/
+    /* border:1px solid grey; */
+}
+/*general styles*/
+html{
+    font-size:62.5%;
+    max-width: 100%; /* 1 rem = 10px */
+}
+body{
+    max-width: 100%;
+    line-height:1.5;
+    font-size:1.8rem;
+    color:#4F4f4f;
+    max-width: 100%;
+}
+h2, h3{
+    letter-spacing: 3px;
+    text-align:center;
+}
+h1{
+    color: antiquewhite;
+    font-size:5rem;
+    text-align: left;
+    margin: 0%;
+}
+h2{
+    font-size:4rem;
+}
+h3{
+    font-size:2.5rem;
+}
+a{
+    text-decoration:none;
+    color:black;
+    background-color:white;
+    padding: 1px;
+}
+section{
+    padding: 4% 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.pizza{
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 5px;
+  max-width: 50%;
+  margin-left:40rem;
+  margin-right:35rem;
 }
 
-.App-link {
-  color: #61dafb;
+header{
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    max-width: 100%;
+    height: 20rem;
+    align-items: center;
+    background-image: linear-gradient(to top right, rgb(242, 27, 113), rgb(242, 28, 107), rgb(241, 30, 101), rgb(241, 31, 96), rgb(240, 33, 90), rgb(240, 34, 84), rgb(239, 36, 78), rgb(239, 37, 72), rgb(238, 39, 66), rgb(238, 40, 61), rgb(237, 42, 55), rgb(237, 43, 49));
+}
+navigation{
+   display: flex;
+   justify-content: right;
+   align-items: right;
+   max-width: 50%;
+   padding: 1rem;
+   height: 15rem;
+   color: red;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+a{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    flex-flow: column wrap;
 }
+
+
