--- a/src/App.css
+++ b/src/App.css
@@ -58,12 +58,16 @@ body{
     color:#4F4f4f;
     max-width: 100%;
 }
-h2, h3{
+h2, h3, h4{
     letter-spacing: 3px;
     text-align:center;
 }
+
+checkbox, input, dropdown {
+    align-items: center;
+}
+
 h1{
-    color: antiquewhite;
     font-size:5rem;
     text-align: left;
     margin: 0%;
@@ -84,13 +88,16 @@ section{
     padding: 4% 0;
 }
 
-
+.pizza_container {
+    margin-left: 30%;
+    margin-right: 30%;
+}
 .pizza{
   display: flex;
   justify-content: center;
   padding: 5px;
   max-width: 50%;
-  margin-left:40rem;
+  margin-left:36rem;
   margin-right:35rem;
 }
 
@@ -120,5 +127,37 @@ a{
     justify-content: space-around;
     flex-flow: column wrap;
 }
+
+.pizza_header {
+    padding: 30px;
+    background-color: salmon;
+}
+
+.size_selection {
+    padding: 30px;
+    background-color: lightyellow;
+}
+
+.sauce_selection {
+    padding: 30px;
+    background-color: papayawhip;
+}
+
+.topping_selection {
+    padding: 30px;
+    background-color: azure; 
+} 
+.special_instructions{
+    color: red;
+}
+
+h4 {
+    color: red;
+}
+
+button {
+    
+}
+
 
 
